--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <img class="down-img" src="imeges/down.png" alt="image" />
                   </div>
                   <div class="down">
-                    <a href="">Products</a>
+                    <a href="">Products-2</a>
                   </div>
                   <div class="down-content">
                     <a href="#">Lorem ipsum dolor</a>
