--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <a href="#">Quis nostrud</a>
                   </div>
                 </li>
-                <li><a href="">Payment</a></li>
+                <li><a href="">Payment-3</a></li>
                 <li><a href="">Shipping</a></li>
               </ul>
             </nav>
